--- a/youro/package.json
+++ b/youro/package.json
@@ -3,19 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-date-picker": "^10.5.1",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
