--- a/youro/package.json
+++ b/youro/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
     "react-date-picker": "^10.5.1",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
