--- a/youro/package.json
+++ b/youro/package.json
@@ -16,6 +16,7 @@
     "react-date-picker": "^10.5.1",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "react-uploader": "^3.43.0",
     "reactjs-popup": "^2.0.6",
     "recharts": "^2.8.0",
     "web-vitals": "^2.1.4"
