--- a/youro/package.json
+++ b/youro/package.json
@@ -11,7 +11,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "hamburger-react": "^2.5.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
+    "react-calendar": "^4.6.0",
     "react-date-picker": "^10.5.1",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
