--- a/youro/package.json
+++ b/youro/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "babel-polyfill": "^6.26.0",
+    "draft-js": "^0.11.7",
     "hamburger-react": "^2.5.0",
     "material-react-table": "^1.15.0",
     "react": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
