--- a/youro/package.json
+++ b/youro/package.json
@@ -13,10 +13,11 @@
     "babel-polyfill": "^6.26.0",
     "draft-js": "^0.11.7",
     "hamburger-react": "^2.5.0",
+    "js-cookie": "^3.0.5",
+    "material-react-table": "^1.15.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.4",
     "react-calendar": "^4.6.0",
-    "material-react-table": "^1.15.0",
     "react-date-picker": "^10.5.1",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
