--- a/youro/package.json
+++ b/youro/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "babel-polyfill": "^6.26.0",
+    "browser-image-compression": "^2.0.2",
     "draft-js": "^0.11.7",
     "hamburger-react": "^2.5.0",
     "js-cookie": "^3.0.5",
