--- a/youro/package.json
+++ b/youro/package.json
@@ -13,7 +13,9 @@
     "babel-polyfill": "^6.26.0",
     "browser-image-compression": "^2.0.2",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "hamburger-react": "^2.5.0",
+    "html-to-draftjs": "^1.5.0",
     "js-cookie": "^3.0.5",
     "material-react-table": "^1.15.0",
     "react": "^18.2.0",
